# Audio_transcription

./: .gitignore  README.md  app.py  main.py  pyproject.toml
config/: settings.py
data/input/: page_2.webm  page_4.webm
data/output/: filled_ocr_result.json  transcription_tracker.json
services/: dict_filler.py  null_detector.py  transcriber.py
static/: app.js  style.css
templates/: index.html
utils/: logger.py
