[project]
name = "audio-transcription-filler"
version = "0.1.0"
description = "Audio transcription filler — fills null OCR dictionary pages using Whisper"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.3",
    "librosa>=0.11.0",
    "noisereduce>=3.0.3",
    "onnx==1.20.1",
    "onnxruntime==1.20.1",
    "openai-whisper>=20250625",
    "python-dotenv>=1.2.2",
    "soundfile>=0.14.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.14.0",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "webrtcvad>=2.0.10",
]
